--- a/index.html
+++ b/index.html
@@ -35,17 +35,15 @@
         </nav>
 
         <div class="icon">
-            <i class="fas fa-search" id="search"></i>
-            <i class="fas fa-bars" id="menu-bar"></i>
-        </div>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook" id="fb"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram" id="ig"></i></a>
 
-        <div class="search">
-            <input type="search" placeholder="search...">
+            <i class="fas fa-bars" id="menu-bar"></i>
+            <i class="fas fa-times" id="menu-close"></i>
         </div>
     </header>
     <!-- header section end here  -->
 
-    <!-- home section start here  -->
     <section class="home" id="home">
         <div class="homeContent">
             <h2>Top-Tier Baking Essentials</h2>
@@ -68,7 +66,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Cake wheat Flour</h3>
-                    <p>Cake flour is milled from soft wheat and contains the lowest amount of protein when compared to other flours, around 5 to 8%.</p>
+                    <p>Cake flour is milled from soft wheat and contains the lowest amount of protein when compared to
+                        other flours, around 5 to 8%.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -80,7 +79,7 @@
                 </div>
                 <div class="product-content">
                     <h3>Fruit Cake</h3>
-                    <p>Examples Strawberry, orange, Apple, Pineapple, Plum , cherry, Raspberry, Banana  etc.</p>
+                    <p>Examples Strawberry, orange, Apple, Pineapple, Plum , cherry, Raspberry, Banana etc.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -92,7 +91,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Potassium Sorbate</h3>
-                    <p> An effective preservative at room temperature, is water-soluble, and does not change the product's taste, smell or appearance.</p>
+                    <p> An effective preservative at room temperature, is water-soluble, and does not change the
+                        product's taste, smell or appearance.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -104,7 +104,9 @@
                 </div>
                 <div class="product-content">
                     <h3>Cake frosting</h3>
-                    <p>A whipped topping that is placed on cakes and cupcakes. It is usually made by whipping butter and sugar together until it's light and fluffy and can be flavored with vanilla beans and cocoa powder</p>
+                    <p>A whipped topping that is placed on cakes and cupcakes. It is usually made by whipping butter and
+                        sugar together until it's light and fluffy and can be flavored with vanilla beans and cocoa
+                        powder</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -116,7 +118,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Sodium Saccharin</h3>
-                    <p>An artificial sweetener that is commonly used as a sugar substitute in various food and beverage products.</p>
+                    <p>An artificial sweetener that is commonly used as a sugar substitute in various food and beverage
+                        products.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -128,7 +131,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Yeast-instant & 2 in one</h3>
-                    <p>A product that serves as both yeast and bread improver for bakery applications. It offers bread with increased volume, better crust color, and a good crumb structure. </p>
+                    <p>A product that serves as both yeast and bread improver for bakery applications. It offers bread
+                        with increased volume, better crust color, and a good crumb structure. </p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -140,7 +144,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Cake Sugars and Icing sugars</h3>
-                    <p>A powdered sugar made from finely milling normal granulated sugar into a powdered form. It's so fine that we think it's the best type of sugar for making any type of cake icing.</p>
+                    <p>A powdered sugar made from finely milling normal granulated sugar into a powdered form. It's so
+                        fine that we think it's the best type of sugar for making any type of cake icing.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -152,7 +157,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Cake Sprinkles</h3>
-                    <p>Pieces of confectionery used as an often colourful decoration or to add texture to desserts such as brownies, cupcakes, doughnuts or ice cream.</p>
+                    <p>Pieces of confectionery used as an often colourful decoration or to add texture to desserts such
+                        as brownies, cupcakes, doughnuts or ice cream.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -164,7 +170,9 @@
                 </div>
                 <div class="product-content">
                     <h3>Extracts</h3>
-                    <p>Made by drawing out the oils of a showcase ingredient and infusing them into a liquid base – generally alcohol. And while vanilla is the most popular and common by far, it's hardly the only extract worth experimenting with.</p>
+                    <p>Made by drawing out the oils of a showcase ingredient and infusing them into a liquid base –
+                        generally alcohol. And while vanilla is the most popular and common by far, it's hardly the only
+                        extract worth experimenting with.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -176,7 +184,9 @@
                 </div>
                 <div class="product-content">
                     <h3>Potassium Sorbate</h3>
-                    <p> Is a food preservative commonly used in the baking industry to prevent mold, yeast, and microbes. It is often used in cakes and icings, beverage syrups, cheese, dried fruits, margarine, pie fillings, wine, etc.</p>
+                    <p> Is a food preservative commonly used in the baking industry to prevent mold, yeast, and
+                        microbes. It is often used in cakes and icings, beverage syrups, cheese, dried fruits,
+                        margarine, pie fillings, wine, etc.</p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -188,7 +198,8 @@
                 </div>
                 <div class="product-content">
                     <h3>Cream</h3>
-                    <p>A dairy product composed of the higher-fat layer skimmed from the top of milk before homogenization. </p>
+                    <p>A dairy product composed of the higher-fat layer skimmed from the top of milk before
+                        homogenization. </p>
                     <div class="orderNow">
                         <a href="#contact"><button>Order Now</button></a>
                     </div>
@@ -196,9 +207,6 @@
             </div>
         </div>
     </section>
-
-    <!-- product section end here  -->
-
     <!-- blogs section start here  -->
     <section class="blogs" id="blogs">
 
@@ -208,7 +216,8 @@
             <div class="card" id="card1">
                 <img src="images/hand-mixer.jpg" alt="Card 1 Image">
                 <h2>Hand mixer</h2>
-                <p>An electric, handheld mixer convenient for quick tasks and combining smaller batches of ingredients. </p>
+                <p>An electric, handheld mixer convenient for quick tasks and combining smaller batches of ingredients.
+                </p>
                 <a href="#contact"><button class="order-btn">Order Now</button></a>
 
             </div>
@@ -296,110 +305,147 @@
         </div>
 
     </section>
-
-    <!-- blogs section ends here  -->
-
     <!-- review section start here  -->
-    <section class="review" id="review">
-        <div class="heading">
-            <h2>More Accessories</h2>
+    <section class="custom-section">
+        <div class="custom-heading">
+            <h2>More Products and Tools</h2>
         </div>
-        <div class=" swiper review-row">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/caky.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
+        <ul class="custom-list">
+            <li class="custom-item">
+                <h3 class="custom-title">Blue Poppy seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">White Poopy seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Pumpkin seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Almond nuts</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Cashew nuts</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Macademia nuts</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Black sesame seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Brown sesame seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">White sesame seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Lenn seeds</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Saccarin sugar</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Aspartame sugar</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Berry sweet 120</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Berry sweet 120</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Powder Whipping cream</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Alkaline coco</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Dessicated coconut</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Red Velvet premix</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Chocolate sponge</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Muffin mix</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Dark and clear valilla essence</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Coloured straberry essence</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Ziplock polythene bags</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Turntables plastic and stainless</h3>
+            </li>
+        </ul>
+    </section>
 
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, perferendis architecto
-                            quasi eveniet aliquam sed?</p>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/client1.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
-
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, perferendis architecto
-                            quasi eveniet aliquam sed?</p>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/client1.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
-
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, perferendis architecto
-                            quasi eveniet aliquam sed?</p>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/client1.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
-
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, perferendis architecto
-                            quasi eveniet aliquam sed?</p>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/client1.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
-
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet </p>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <div class="client-info">
-                        <div class="img">
-                            <img src="images/client1.jpg" alt="">
-                        </div>
-                        <div class="clientDetailed">
-                            <h3>Hardy Devid</h3>
-
-                        </div>
-                    </div>
-                    <div class="client-review">
-                        <p>Lorem, ipsum dolor sit amet d?</p>
-                    </div>
-                </div>
-
-                <div class="swiper-pagination"></div>
-
-
-            </div>
+    <section class="custom-section">
+        <div class="custom-heading">
+            <h2>Order with us Now!</h2>
         </div>
+        <ul class="custom-list">
+            <li class="custom-item">
+                <h3 class="custom-title">Gelatin</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Potassium sorbet</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Bread improver</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Nevada yeast</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Saf-instant yeast 1 & 2</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Cake bread</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Calcium</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Egg yellow</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Ascorbic acid(Vitamin c)</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Dailyland milk, white and dark chocolate 2.5kg</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Vanhouten 2.5kg dark chocolate</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Lyonshall maid 2.5kg chocolate milk, white and dark</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Bad sealer</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Leather oven gloves</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Slice boxes</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">0.5kg boxes</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Hair nets white and blue</h3>
+            </li>
+            <li class="custom-item">
+                <h3 class="custom-title">Vanilla sponge</h3>
+            </li>
+        </ul>
     </section>
 
     <footer class="footer" id="contact">
@@ -449,15 +495,14 @@
 
         <!-- footer section start here  -->
         <div class="share">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook" id="fb"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram" id="ig"></i></a>
 
         </div>
         <div class="credit">
             created by <span>Kelvin. </span> | &copy; 2024 All Rights Reserved
         </div>
-        
+
     </footer>
 
     <!-- swiper js link  -->
